--- a/.github/actions/functional-test-backend/action.yml
+++ b/.github/actions/functional-test-backend/action.yml
@@ -7,11 +7,10 @@ runs:
       shell: bash
       run: |
         set +e
-        npm ci
-        export CI=true
+        docker compose run --rm api npm install
         docker compose up -d
         bash ./.github/actions/functional-test-backend/wait-kuzzle.sh
-        npm run test:functional
+        docker compose exec api npm run test:functional
         exitcode="$?"
         [[ "$exitcode" == "0" ]] || docker compose logs api
         exit "$exitcode"
