--- a/.github/workflows/deploy_main.workflow.yml
+++ b/.github/workflows/deploy_main.workflow.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 env:
-  NODE_VERSION: '20'
+  NODE_VERSION: "22"
   KUZZLE_PAAS_REGISTRY: harbor.paas.kuzzle.io
   KUZZLE_PAAS_PROJECT: projectId
 
