--- a/apps/exporter/package.json
+++ b/apps/exporter/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "@kuzzleio/puppeteer-exporter": "1.5.2"
   },
-  "engines": {
-    "node": ">=16"
-  },
   "devDependencies": {
-    "nodemon": "2.0.22",
-    "typescript": "5.1.*"
-  }
+    "nodemon": "3.1.9",
+    "typescript": "5.4.*"
+  },
+  "engines": {
+    "node": ">=22"
+  },
+  "packageManager": "npm@11.0.0"
 }
