--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,11 +26,15 @@
     "@vitejs/plugin-vue2": "2.3.3",
     "autoprefixer": "10.4.20",
     "eslint-plugin-tailwindcss": "3.17.5",
-    "eslint-plugin-vue-kuzzle": "0.0.13",
+    "eslint-plugin-vue-kuzzle": "0.0.12",
     "sass": "1.83.*",
     "tailwindcss": "3.4.17",
     "typescript": "5.4.*",
     "vite": "6.0.7",
     "vue-tsc": "2.2.0"
-  }
+  },
+  "engines": {
+    "node": ">=22"
+  },
+  "packageManager": "npm@11.0.0"
 }
