--- a/package.json
+++ b/package.json
@@ -14,15 +14,13 @@
     "test:functional": "turbo run test:functional"
   },
   "devDependencies": {
-    "eslint": "8.50.0",
-    "eslint-plugin-kuzzle": "0.0.12",
-    "eslint-plugin-prettier": "^5.0.0",
-    "prettier": "^3.2.5",
-    "turbo": "2.0.3",
+    "eslint-plugin-prettier": "5.2.1",
+    "prettier": "3.4.2",
+    "turbo": "2.3.3",
     "typescript": "5.4.*"
   },
   "engines": {
-    "node": ">=18.17.1"
+    "node": ">=22"
   },
-  "packageManager": "npm@10.1.0"
+  "packageManager": "npm@11.0.0"
 }
