chore(deps): update platform package

--- a/.github/actions/install-packages/action.yml
+++ b/.github/actions/install-packages/action.yml
@@ -4,5 +4,5 @@ description: Install necessary packages inside the CI
 runs:
   using: "composite"
   steps:
-    - run: sudo apt install libunwind-dev libunwind8 build-essential libstdc++6 -y
+    - run: sudo apt update && sudo apt install libunwind-dev libunwind8 build-essential libstdc++6 -y
       shell: bash
