--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "test:functional": "turbo run test:functional"
   },
   "devDependencies": {
+    "eslint": "8.50.0",
+    "eslint-plugin-kuzzle": "0.0.12",
     "eslint-plugin-prettier": "5.2.1",
     "prettier": "3.4.2",
     "turbo": "2.3.3",
