--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,34 +7,33 @@
     "clean": "rm -rf dist",
     "build": "npm run clean && tsc --build",
     "prod": "node dist/app.js",
-    "dev": "NODE_ENV=development ergol app.ts -c ergol.config.json",
+    "dev": "NODE_ENV=development tsx watch app.ts",
     "format": "prettier lib/ tests/ --write",
     "test": "npm run test:lint && npm run test:types && npm run test:functional",
     "test:lint": "eslint ./lib ./tests",
     "test:lint:fix": "npm run test:lint -- --fix",
     "test:types": "tsc --noEmit -p tsconfig.test.json",
-    "test:functional": "jest --runInBand --detectOpenHandles --forceExit",
+    "test:functional": "vitest run --fileParallelism false",
     "ci:types": "tsc --version && npm run test:types"
   },
   "main": "app.ts",
   "license": "Apache-2.0",
   "dependencies": {
-    "@kuzzleio/iot-platform-backend": "3.5.0",
-    "kuzzle": "2.42.0",
+    "@kuzzleio/iot-platform-backend": "3.5.2",
+    "kuzzle": "2.43.1",
     "lodash": "4.17.21"
   },
   "devDependencies": {
-    "@kuzzleio/plugin-multi-tenancy": "*",
     "@types/jest": "29.5.14",
-    "@types/lodash": "4.17.14",
-    "@types/node": "22.10.6",
+    "@types/lodash": "4.17.17",
+    "@types/node": "22.15.21",
     "ergol": "1.0.2",
     "eslint-plugin-kuzzle": "0.0.13",
-    "jest": "29.7.0",
     "kuzzle-sdk": "7.15.*",
-    "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
-    "typescript": "5.4.*"
+    "typescript": "5.4.*",
+    "tsx": "4.19.4",
+    "vitest": "3.1.4"
   },
   "files": [
     "dist/**/"
@@ -42,5 +41,5 @@
   "engines": {
     "node": ">=22"
   },
-  "packageManager": "npm@11.0.0"
+  "packageManager": "npm@11.4.0"
 }
