--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,13 +25,14 @@
     "@types/lodash": "4.17",
     "@vitejs/plugin-vue2": "2.3.3",
     "autoprefixer": "10.4.21",
-    "eslint-plugin-tailwindcss": "3.18.0",
-    "eslint-plugin-vue-kuzzle": "0.0.13",
+    "eslint-plugin-vue-kuzzle": "0.0.12",
     "sass": "1.89.*",
     "tailwindcss": "3.4.17",
     "typescript": "5.4.*",
     "vite": "6.3.5",
-    "vue-tsc": "2.2.10"
+    "vue-tsc": "2.2.10",
+    "happy-dom": "10.11.2",
+    "jest": "29.4.3"
   },
   "engines": {
     "node": ">=22"
