--- a/.github/actions/functional-test-backend/action.yml
+++ b/.github/actions/functional-test-backend/action.yml
@@ -7,10 +7,10 @@ runs:
       shell: bash
       run: |
         set +e
-        docker compose run --rm api npm install
+        docker compose run --rm kuzzle npm install
         docker compose up -d
         bash ./.github/actions/functional-test-backend/wait-kuzzle.sh
-        docker compose exec api npm run test:functional
+        docker compose exec kuzzle npm run test:functional
         exitcode="$?"
-        [[ "$exitcode" == "0" ]] || docker compose logs api
+        [[ "$exitcode" == "0" ]] || docker compose logs kuzzle
         exit "$exitcode"
