Revert "chore: update ESLint action to configure git URL for dependencies"
This reverts commit bee4a744fe6f13c6d64a0f33aea9fa235a95028c.

--- a/.github/actions/lint/action.yml
+++ b/.github/actions/lint/action.yml
@@ -1,11 +1,10 @@
 name: ESLint
 description: Run ESLint
 runs:
-  using: 'composite'
+  using: "composite"
   steps:
     - name: Install deps
       shell: bash
       run: |
-        git config --global url."git@github.com:".insteadOf git://github.com/
         npm ci
         npm run test:lint
