--- a/.github/workflows/development.workflow.yml
+++ b/.github/workflows/development.workflow.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
 
       - name: Install additional libraries
         uses: ./.github/actions/install-packages
@@ -36,10 +38,11 @@ jobs:
   functional-tests-backend:
     name: Functional Tests
     runs-on: ubuntu-24.04
-    needs: [lint]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
 
       - name: Install additional libraries
         uses: ./.github/actions/install-packages
