--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -15,16 +15,12 @@ FROM node:22-bookworm-slim
 
 WORKDIR /var/app
 
-ARG KUZZLE_ENV
+ARG KUZZLE_ENV="local"
 ARG KUZZLE_VAULT_KEY
-ARG PUPPETEER_SERVER_URL
-ARG PUPPETEER_SERVER_PORT
 
 ENV NODE_ENV=production \
     KUZZLE_ENV=${KUZZLE_ENV} \
-    KUZZLE_VAULT_KEY=${KUZZLE_VAULT_KEY} \
-    PUPPETEER_SERVER_URL=${PUPPETEER_SERVER_URL} \
-    PUPPETEER_SERVER_PORT=${PUPPETEER_SERVER_PORT}
+    KUZZLE_VAULT_KEY=${KUZZLE_VAULT_KEY}
 
 COPY --from=builder /var/app/dist ./
 COPY --from=builder /var/app/node_modules ./node_modules
