--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "test:functional": "turbo run test:functional"
   },
   "devDependencies": {
-    "eslint-plugin-kuzzle": "0.0.13",
-    "turbo": "2.5.4",
-    "typescript": "5.4.*"
+    "turbo": "2.5.4"
   },
   "engines": {
     "node": ">=22"
