--- a/.github/actions/functional-test-backend/action.yml
+++ b/.github/actions/functional-test-backend/action.yml
@@ -7,7 +7,7 @@ runs:
       shell: bash
       run: |
         set +e
-        docker compose run --rm kuzzle npm install
+        docker compose run --rm --no-deps kuzzle npm install
         docker compose up -d
         bash ./.github/actions/functional-test-backend/wait-kuzzle.sh
         docker compose exec kuzzle npm run test:functional
