--- a/.github/actions/test-functional/action.yml
+++ b/.github/actions/test-functional/action.yml
@@ -7,9 +7,9 @@ runs:
       shell: bash
       run: |
         set +e
-        docker compose run --rm kuzzle npm install
+        docker compose run --rm --no-deps kuzzle npm install
         docker compose up -d
-        bash ./.github/actions/functional-test-backend/wait-kuzzle.sh
+        bash ./.github/actions/test-functional/wait-kuzzle.sh
         docker compose exec kuzzle npm run test:functional
         exitcode="$?"
         [[ "$exitcode" == "0" ]] || docker compose logs kuzzle
