--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -15,7 +15,7 @@ FROM node:22-bookworm-slim
 
 WORKDIR /var/app
 
-ARG KUZZLE_ENV="local"
+ARG KUZZLE_ENV
 ARG KUZZLE_VAULT_KEY
 
 ENV NODE_ENV=production \
@@ -26,5 +26,6 @@ COPY --from=builder /var/app/dist ./
 COPY --from=builder /var/app/node_modules ./node_modules
 COPY --from=builder /var/app/package*.json ./
 COPY --from=builder /var/app/lib/environments/${KUZZLE_ENV}/kuzzlerc ./.kuzzlerc
+COPY --from=builder /var/app/lib/environments/${KUZZLE_ENV}/secrets.enc.json /var/app/secrets.enc.json
 
 CMD [ "node", "app.js" ]
