fix: does not copy the secret file with no configured vault key

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -26,6 +26,6 @@ COPY --from=builder /var/app/dist ./
 COPY --from=builder /var/app/node_modules ./node_modules
 COPY --from=builder /var/app/package*.json ./
 COPY --from=builder /var/app/lib/environments/${KUZZLE_ENV}/kuzzlerc ./.kuzzlerc
-COPY --from=builder /var/app/lib/environments/${KUZZLE_ENV}/secrets.enc.json /var/app/secrets.enc.json
+# COPY --from=builder /var/app/lib/environments/${KUZZLE_ENV}/secrets.enc.json /var/app/secrets.enc.json
 
 CMD [ "node", "app.js" ]
