--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   redis:
-    image: redis:6
+    image: redis:8
     restart: unless-stopped
     ports:
       - '6379:6379'
@@ -12,7 +12,7 @@ services:
     network_mode: 'host'
 
   elasticsearch:
-    image: kuzzleio/elasticsearch:7
+    image: docker.io/bitnamilegacy/elasticsearch:8.17.1-debian-12-r6
     restart: unless-stopped
     ports:
       - '9200:9200'
@@ -70,6 +70,7 @@ services:
       - .:/var/app
       - ~/.npmrc:/root/.npmrc:cached
     environment:
+      - kuzzle_services__storageEngine__majorVersion=8
       - kuzzle_services__storageEngine__client__node=http://localhost:9200
       - kuzzle_services__storageEngine__commonMapping__dynamic=true
       - kuzzle_services__internalCache__node__host=localhost
