--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,10 @@ services:
       - '6379:6379'
     healthcheck:
       test: ['CMD', 'redis-cli', 'ping']
-      interval: 1s
-      timeout: 3s
+      interval: 10s
+      timeout: 10s
       retries: 30
+      start_period: 1m
     network_mode: 'host'
 
   elasticsearch:
@@ -18,11 +19,13 @@ services:
       - '9200:9200'
     environment:
       - ingest.geoip.downloader.enabled=false
+      - ES_JAVA_OPTS=-Xms1g -Xmx1g
     healthcheck:
       test: ['CMD', 'curl', '-f', 'http://localhost:9200']
-      interval: 2s
-      timeout: 2s
-      retries: 10
+      interval: 10s
+      timeout: 10s
+      retries: 30
+      start_period: 1m
     ulimits:
       nofile: 65536
     volumes:
@@ -62,8 +65,8 @@ services:
       - '1883:1883'
     healthcheck:
       test: ['CMD', 'curl', '-f', 'http://localhost:7512/_healthcheck']
-      timeout: 10s
       interval: 10s
+      timeout: 10s
       retries: 30
       start_period: 1m
     volumes:
